Fixes Sonar issues